# rust-axum-course

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
examples/: gen_key.rs  quick_dev.rs
http-root/: index.html
sql/dev_initial/: 00-recreate-db.sql  01-create-schema.sql
src/: config.rs  error.rs  log.rs  main.rs  model.rs
src/_dev_utils/: dev_db.rs  mod.rs
src/crypt/: error.rs  pwd.rs
src/ctx/: error.rs  mod.rs
src/log/: mod.rs
src/model/: base.rs  error.rs  mod.rs  user.rs  vendor.rs
src/model/store/: mod.rs
src/web/: error.rs  mod.rs  mw_auth.rs  mw_res_map.rs  routes_login.rs  routes_static.rs  routes_vendors.rs
