[package]
name = "rust-axum-course"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
# Serde / json
serde = { version = "1", features = ["derive"]}
serde_json = "1"
serde_with = "2"
#axum
axum = "0.7"
tower-http = { version = "0.5", features = ["fs"]}
tower-cookies = "0.10"
# -- Data
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "uuid", "time" ] }
# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
# Others
lazy-regex = "2"
async-trait = "0.1"
strum_macros = "0.25"
uuid = { version = "1", features = ["v4", "fast-rng"] }

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
