[package]
name = "rust-axum-course"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
# Serde / json
serde = { version = "1", features = ["derive"]}
serde_json = "1"
serde_with = "3"
#axum
axum = "0.7"
tower-http = { version = "0.5", features = ["fs"]}
tower-cookies = "0.10"
# -- Data
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres", "uuid", "time" ] }
sqlb = "0.4"
# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
# -- Crypt & Encoding
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
base64-url = "2"
# Others
lazy-regex = "3"
async-trait = "0.1"
strum_macros = "0.25"
uuid = { version = "1", features = ["v4", "fast-rng"] }
time = "0.3"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
serial_test = "2"
